--- a/public/game/manifest.json
+++ b/public/game/manifest.json
@@ -10,6 +10,10 @@
                 {
                     "name": "bedroom",
                     "srcs": "./sprites/bedroom.png"
+                },
+                {
+                    "name": "lighting",
+                    "srcs": "./sprites/lighting.png"
                 }
             ]
         }
